--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "reactflow": "^11.11.3",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4",
     "wowjs": "^1.1.3"
