--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@google/generative-ai": "^0.11.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "puppeteer": "^22.9.0",
     "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   },
