--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "reactflow": "^11.11.3",
+    "remarkable": "^2.0.1",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4",
