--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/vertexai": "^1.2.0",
     "@google/generative-ai": "^0.11.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
