--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,10 +36,10 @@ jobs:
           cd backend
           pm2 start index.js --name node  # Start your backend application using PM2, replace 'index.js' with your entry file if different
 
-      - name: Start Frontend Application
+      - name: Start Frontend Application with PM2
         run: |
           cd frontend
-          npm start &  # Start your frontend application, replace 'npm start' with your actual start command if different
+          pm2 start npm --name frontend -- start  # Start your frontend application using PM2, replace 'npm start' with your actual start command if different
 
       - name: Tunnel Frontend with Telebit
         run: |
