--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,22 +26,12 @@ jobs:
           cd backend
           npm install
 
-      - name: Install Frontend Dependencies
-        run: |
-          cd frontend
-          npm install
 
       - name: Start Backend Application with PM2
         run: |
           cd backend
           pm2 start index.js --name node  # Start your backend application using PM2, replace 'index.js' with your entry file if different
+          
+          -name: tunnel backend with telebit
+          run: | ./telebit http 5500          
 
-      - name: Start Frontend Application with PM2
-        run: |
-          cd frontend
-          pm2 start npm --name frontend -- start  # Start your frontend application using PM2, replace 'npm start' with your actual start command if different
-
-      - name: Tunnel Frontend with Telebit
-        run: |
-          cd frontend
-          ~/telebit http 3000
