--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,13 +26,12 @@ jobs:
           cd backend
           npm install
 
-
       - name: Start Backend Application with PM2
         run: |
           cd backend
           pm2 start index.js --name node  # Start your backend application using PM2, replace 'index.js' with your entry file if different
-          ./telebit http 5500          
-          
-      
-         
 
+      - name: Tunnel Backend with Telebit
+        run: |
+          cd backend
+          ~/telebit http 5500  # Adjust the path to Telebit and the port if necessary
